--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -205,12 +205,12 @@
                         <dxg:GridControl CurrentItem="{Binding SelectedAction, Mode=TwoWay}">
                             <dxg:GridControl.Columns>
                                 <dxg:GridColumn Width="325" FieldName="Name" />
-                                <dxg:GridColumn FieldName="Status">
+                                <dxg:GridColumn FieldName="Status2">
                                     <dxg:GridColumn.CellTemplate>
                                         <DataTemplate>
                                             <dxe:ComboBoxEdit Name="PART_Editor">
                                                 <dxmvvm:Interaction.Behaviors>
-                                                    <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum}" />
+                                                    <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum2}" />
                                                 </dxmvvm:Interaction.Behaviors>
                                             </dxe:ComboBoxEdit>
                                         </DataTemplate>
