--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -249,18 +249,24 @@
                                     <dxg:TableView.FormatConditions>
                                         <dxg:FormatCondition
                                             ApplyToRow="True"
-                                            Expression="[IsActive] = True And [Status] !='Completed'"
-                                            FieldName="IsActive"
+                                            Expression="[Status2] =='InWork'"
                                             PredefinedFormatName="GreenFillWithDarkGreenText" />
                                         <dxg:FormatCondition
                                             ApplyToRow="True"
-                                            Expression="[Status] = 'Completed'"
-                                            FieldName="Status"
+                                            Expression="[Status2] = 'Done
+                                            '"
                                             Value1="{x:Null}"
                                             ValueRule="Expression">
-                                            <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}" />
+                                            <dx:Format Foreground="#FFBAB8AB" TextDecorations="{x:Null}" />
                                         </dxg:FormatCondition>
-                                        <dxg:FormatCondition Expression="[IsActive] = True and [Status] = 'Scheduled' and [ScheduledTime] &lt; LocalDateTimeToday()" FieldName="ScheduledTime">
+                                        <dxg:FormatCondition
+                                            ApplyToRow="True"
+                                            Expression="[Status2] = 'Rejected'"
+                                            Value1="{x:Null}"
+                                            ValueRule="Expression">
+                                            <dx:Format Foreground="#FFFA9682" TextDecorations="{x:Null}" />
+                                        </dxg:FormatCondition>
+                                        <dxg:FormatCondition Expression="[Status2] = 'InWork' and [ScheduledTime]!=null and [ScheduledTime] &lt; LocalDateTimeToday()" FieldName="ScheduledTime">
                                             <dx:Format Background="OrangeRed"/>
                                         </dxg:FormatCondition>
                                     </dxg:TableView.FormatConditions>
@@ -299,7 +305,7 @@
                             </dxg:FormatCondition>
                             <dxg:FormatCondition
                                 ApplyToRow="True"
-                                Expression="GetActiveActions([Actions]) = 0 and [Status]!='Done'"
+                                Expression="GetActiveActions([Actions]) = 0 and ([Status]=='InWork' or [Status]=='Delayed' ) "
                                 FieldName="Actions">
                                 <dx:Format Background="#FFA589C7" />
                             </dxg:FormatCondition>
